clusters/home/adguard/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        # env:
        # - name: AGH_CONFIG
        #   valueFrom:
        #     configMapKeyRef:
        #       name: adguard-config
        #       key: AdGuardHome.yaml
        ports:
        - containerPort: 53 #dns
          name: dns
          protocol: UDP
        - containerPort: 3000 #initial setup
          name: http-initial
        - containerPort: 80 #web gui
          name: http
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
      volumes:
      - name: adguard-data
        nfs:
          server: 10.0.0.11 # TODO: Use DNS?
          path: /mnt/adguard
