clusters/home/adguard/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  selector:
    app.kubernetes.io/name: adguard
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 10.0.3.102
  ports:
    - name: udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-public
spec:
  hostnames:
  - adguard.blrobinson.uk
  parentRefs:
  - name: nginx-ingress
    namespace: ingress
    sectionName: https
  rules:
  - backendRefs:
    - name: adguard
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-v6
spec:
  selector:
    app.kubernetes.io/name: adguard
  type: LoadBalancer
  ipFamilies:
    - IPv6
  ipFamilyPolicy: SingleStack
  externalTrafficPolicy: Cluster
  loadBalancerIP: 2a06:61c2:27ae:2::2
  ports:
    - name: udp
      protocol: UDP
      port: 53
      targetPort: 53
